--- a/BackUI/css/main.css
+++ b/BackUI/css/main.css
@@ -1,21 +1,62 @@
-html{
+html {
 	height: 98%;
 }
-footer{
+
+footer {
 	text-align: center;
 	font-size: 15px;
 	color: #919191;
 	margin: 0;
 	padding: 0;
 }
-a{
+
+a {
 	text-decoration: none;
 }
-.disscroll{
+
+.disscroll {
 	overflow: hidden;
 }
-.fullwindow{
+
+.fullwindow {
 	width: 100%;
 	height: 100%;
 }
 
+.mainback {
+	/*background-image: url(../imgs/mainback.jpg);*/
+	background-attachment: fixed;
+	background-position: 0px -600px;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.headimg {
+	background: rgba(255, 255, 255, 0);
+	height: 100px;
+	border: 0px;
+}
+
+.login {
+	float: left;
+	height: 100%;
+	width: 30%;
+}
+
+.logo {
+	float: left;
+	height: 100%;
+	width: 70%;
+}
+
+.headPic {
+	background-image: url(../imgs/headpic.jpg);
+	background-size: cover;
+	border: 1px solid #FFFFFF;
+	float: right;
+	margin: 5px 10px;
+	height: 80px;
+	width: 80px;
+	background-color: #FFFFFF;
+	cursor: pointer;
+}
